# homosexuality-simulator

./: ._book.xlsx  .gitignore  ARTICLE.MD  COMMANDS.md  Cargo.toml  Copy of practice data-2.xlsx  Homosexuality-Simulator.js  LICENSE.md  README.md  book.xlsx  index.ts  package.json  result copy.txt  result.txt  result_1360m.txt  result_book.xlsx  results.txt  run.sh  ~$result_book.xlsx
assets/: Person.ts  configuration.ts
old_results/: Homosexuality-Simulator.xlsx  results.xlsx
results/: 75_75_75.txt  forced_breeding.txt  forced_breeding_50percent.txt  random_event_child_count.txt  run_1.txt  run_2.txt  run_3.txt  run_max.txt  sociological.txt  source.xlsx  table_source.xlsx
results/0_socio_0_rand_0_start/: ._results.txt  results.txt
results/run_1/: results.txt  results.xlsx
results/run_10/: results.txt  results.xlsx
results/run_2/: results.txt  results.xlsx
results/run_3/: results.txt  results.xlsx
results/run_4/: results.txt  results.xlsx
results/run_5/: results.txt  results.xlsx
results/run_6/: results.txt  results.xlsx
results/run_7/: results.txt  results.xlsx
results/run_8/: results.txt  results.xlsx
results/run_9/: results.txt  results.xlsx
results/scenario_1/: result_715m.txt
results/scenario_3/: result_500m.txt
results/scenario_one/: result_450m.txt
results/scenario_two/: result_500m.txt
results_new/: run_1.txt
src/: allele.rs  config.rs  gender.rs  gene.rs  genome.rs  main.rs  person.rs
