[package]
name = "homosexuality-simulator-rust"
version = "0.1.0"
edition = "2021"
authors = ["Jake Spencer Walklate [svnty] <jakewalklate@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/svnty/homosexuality-simulator"
license = "MIT"
license-file = "LICENSE.md"
keywords = ["Bioinformatics", "Same-sex attraction", "Genetics", "Population simulation"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"